zz-k8s-rpi-apps-deprecated/k8s-rpi-apps-dexidp/secured-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/dex"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<dexhostname>`)
    kind: Rule
    services:
    - name: dexidp
      port: 5556
  tls:
    certResolver: godaddy
